[package]
name = "lifers-ascii"
description = "A simple ASCII frontend for lifers"
version = "0.1.0"
repository = "https://github.com/Froloket64/lifers-ascii.git"
license = "MIT"
edition = "2021"
keywords = ["cellular_automata", "game_of_life"]
categories = ["simulation"]

[dependencies]
lifers = "0.1.0"
